# dos5022

./: ANALYTICS.md  PREPROCESSING.md  PROJECT_SUMMARY.md  README.md  USAGE.md  config.yaml  main.py  pyproject.toml
Datasets/: GovernmentProcurementviaGeBIZ.xlsx
notebooks/: 01_preprocessing.ipynb  02_modeling.ipynb  supplier clustering and risk prediction.ipynb
src/: download_data.py  preprocessing.py  visualization.py
src/models/: award_classifier.py  award_predictor.py  clustering.py
